--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@
 	<audio id="kutFramework" src="kutFramework.mp3"></audio>
 	<audio id="fuckHybris" src="fuckHybris.mp3"></audio>
 	<audio id="krulTenen" src="krultenen.mp3"></audio>
+	<audio id="hallometkurt" src="hallometkurt.mp3"></audio>
+	
 	<button onclick="document.getElementById('waaromTraag').play()">Waarom is da zo traag?</button>
  	<button onclick="document.getElementById('WTF').play()">WTF</button>
  	<button onclick="document.getElementById('kutFramework').play()">Wa een kut framework</button>
  	<button onclick="document.getElementById('fuckHybris').play()">Fuck Hybris</button>
  	<button onclick="document.getElementById('krulTenen').play()">Ik krijg hier krultenen van</button>
+ 	<button onclick="document.getElementById('hallometkurt').play()">Hallo met Kurt</button>
 </body>
 </html>
