--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 	<audio id="Prenuptia" src="Prenuptia.m4a"></audio>
 	<audio id="Koffiekoeken" src="Koffiekoeken.m4a"></audio>
 	<audio id="Honger" src="Honger.m4a"></audio>
+	<audio id="Vriendjes" src="Vriendjes.m4a"></audio>
 	
 	<button onclick="document.getElementById('waaromTraag').play()">Waarom is da zo traag?</button>
  	<button onclick="document.getElementById('WTF').play()">WTF</button>
@@ -40,5 +41,6 @@
  	<button onclick="document.getElementById('Prenuptia').play()">Prenuptia</button>
  	<button onclick="document.getElementById('Koffiekoeken').play()">Koffiekoeken</button>
  	<button onclick="document.getElementById('Honger').play()">Honger</button>
+ 	<button onclick="document.getElementById('Vriendjes').play()">Vriendjes</button>
 </body>
 </html>
