--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 	<audio id="Koffiekoeken" src="Koffiekoeken.m4a"></audio>
 	<audio id="Honger" src="Honger.m4a"></audio>
 	<audio id="Vriendjes" src="Vriendjes.m4a"></audio>
+	<audio id="pannenkoek" src="pannenkoek.mp3"></audio>
 	
 	<button onclick="document.getElementById('waaromTraag').play()">Waarom is da zo traag?</button>
  	<button onclick="document.getElementById('WTF').play()">WTF</button>
@@ -35,6 +36,7 @@
  	<button onclick="document.getElementById('fuckHybris').play()">Fuck Hybris</button>
  	<button onclick="document.getElementById('krulTenen').play()">Ik krijg hier krultenen van</button>
  	<button onclick="document.getElementById('hallometkurt').play()">Hallo met Kurt</button>
+ 	<button onclick="document.getElementById('pannenkoek').play()">Hey, pannenkoek</button>
 
 	<h1>Veerle</h1>
  	<button onclick="document.getElementById('dude').play()">Dude</button>
